# FlowDeck

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.config.ts  install.sh  mkdocs.yml  package-lock.json  package.json  postinstall.mjs  requirements.txt  tsconfig.json  uninstall.sh  vitest.config.ts
.github/: FUNDING.yml
agents/: architect.md  build-error-resolver.md  code-explorer.md  coder.md  cost-optimizer.md  debug-specialist.md  discusser.md  doc-updater.md  eval-reviewer.md  flowdeck-executor.md  flowdeck-plan-checker.md  flowdeck-planner.md  hero-agents.md  mapper.md  multi-repo-coordinator.md  orchestrator.md  parallel-coordinator.md  performance-optimizer.md  planner.md  policy-enforcer.md  refactor-guide.md  replay-analyst.md  researcher.md  reviewer.md  tester.md  (+4 more)
crates/fdx/: Cargo.toml
crates/fdx/src/: lib.rs  main.rs  runner.rs  tee.rs
crates/fdx/src/output/: json.rs  ls_tree_json.rs  ls_tree_text.rs  mod.rs  outline_diff_json.rs  outline_diff_text.rs  text.rs
crates/fdx/src/reader/: batch.rs  diff.rs  git.rs  grep.rs  impact.rs  lint.rs  ls.rs  mod.rs  outline.rs  search.rs  test_runner.rs  text.rs  tree.rs
crates/fdx/src/reader/code/: cache.rs  deep.rs  mod.rs  parser.rs  prototype.rs
crates/fdx/src/reader/code/languages/: mod.rs
crates/fdx/tests/: integration_tests.rs  test_batch.rs  test_cache.rs  test_core.rs  test_deep.rs  test_diff.rs  test_git.rs  test_grep.rs  test_impact.rs  test_lint.rs  test_ls.rs  test_outline.rs  test_output.rs  test_prototype.rs  test_search.rs  test_test_runner.rs  test_tree.rs
(+582 files in other folders)
